--- a/Copia_de_Weekly_SKU_level_Product_Sales_Transactions.ipynb
+++ b/Copia_de_Weekly_SKU_level_Product_Sales_Transactions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhzZTXEz2wU1agJxiLnqT4",
+      "authorship_tag": "ABX9TyM5g0aoL9KpFCeDngAhucfH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -922,7 +922,7 @@
       "metadata": {
         "id": "MJBv7Qk-aXgl"
       },
-      "execution_count": 67,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -946,9 +946,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YikGDQVqZzJO",
-        "outputId": "69a17ad5-be36-406a-957e-aee2293dbd08"
+        "outputId": "97bf0212-842a-48b8-c82b-4a0d65966618"
       },
-      "execution_count": 68,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "stream",
@@ -966,34 +966,343 @@
     {
       "cell_type": "code",
       "source": [
-        "store1['Price'].describe()"
+        "store1.head()"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 297
         },
         "id": "sbmgM92QyNrk",
-        "outputId": "a7b30a70-f8fa-47f9-9cf5-4d4f3198cafe"
+        "outputId": "4c4a60d1-c9b8-4bad-f841-edc6b0a8d221"
       },
-      "execution_count": 69,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "count    1000.000000\n",
-              "mean       55.919000\n",
-              "std        27.140985\n",
-              "min        10.000000\n",
-              "25%        32.000000\n",
-              "50%        56.000000\n",
-              "75%        80.000000\n",
-              "max       100.000000\n",
-              "Name: Price, dtype: float64"
+              "    Scode Pcode  Price  2022-01-03 00:00:00  2022-01-10 00:00:00  \\\n",
+              "0  Store1  SKU1   24.0                   23                   48   \n",
+              "1  Store1  SKU2   63.0                   23                   22   \n",
+              "2  Store1  SKU3   93.0                    7                   11   \n",
+              "3  Store1  SKU4   48.0                   50                   31   \n",
+              "4  Store1  SKU5   62.0                    8                    5   \n",
+              "\n",
+              "   2022-01-17 00:00:00  2022-01-24 00:00:00  2022-01-31 00:00:00  \\\n",
+              "0                   47                   42                   22   \n",
+              "1                   25                   40                   32   \n",
+              "2                    8                    9                   10   \n",
+              "3                   50                   33                   26   \n",
+              "4                   13                   11                    6   \n",
+              "\n",
+              "   2022-02-07 00:00:00  2022-02-14 00:00:00  ...  2023-10-23 00:00:00  \\\n",
+              "0                   29                   47  ...                   31   \n",
+              "1                   26                   30  ...                   20   \n",
+              "2                    8                    7  ...                    9   \n",
+              "3                   27                   42  ...                   31   \n",
+              "4                    7                    9  ...                   19   \n",
+              "\n",
+              "   2023-10-30 00:00:00  2023-11-06 00:00:00  2023-11-13 00:00:00  \\\n",
+              "0                   37                   33                   40   \n",
+              "1                   20                   25                   50   \n",
+              "2                   17                   13                   30   \n",
+              "3                   23                   26                   23   \n",
+              "4                    9                   15                   21   \n",
+              "\n",
+              "   2023-11-20 00:00:00  2023-11-27 00:00:00  2023-12-04 00:00:00  \\\n",
+              "0                  125                  133                  229   \n",
+              "1                   75                   95                  231   \n",
+              "2                   67                  188                  267   \n",
+              "3                   92                  126                  205   \n",
+              "4                   93                  243                  710   \n",
+              "\n",
+              "   2023-12-11 00:00:00  2023-12-18 00:00:00  2023-12-25 00:00:00  \n",
+              "0                  381                   21                   31  \n",
+              "1                  590                   25                   33  \n",
+              "2                  330                   35                   33  \n",
+              "3                  357                   30                   34  \n",
+              "4                 1872                   33                   10  \n",
+              "\n",
+              "[5 rows x 107 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-7c443d7e-a8cd-441c-a26a-c2bc186e73a5\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Scode</th>\n",
+              "      <th>Pcode</th>\n",
+              "      <th>Price</th>\n",
+              "      <th>2022-01-03 00:00:00</th>\n",
+              "      <th>2022-01-10 00:00:00</th>\n",
+              "      <th>2022-01-17 00:00:00</th>\n",
+              "      <th>2022-01-24 00:00:00</th>\n",
+              "      <th>2022-01-31 00:00:00</th>\n",
+              "      <th>2022-02-07 00:00:00</th>\n",
+              "      <th>2022-02-14 00:00:00</th>\n",
+              "      <th>...</th>\n",
+              "      <th>2023-10-23 00:00:00</th>\n",
+              "      <th>2023-10-30 00:00:00</th>\n",
+              "      <th>2023-11-06 00:00:00</th>\n",
+              "      <th>2023-11-13 00:00:00</th>\n",
+              "      <th>2023-11-20 00:00:00</th>\n",
+              "      <th>2023-11-27 00:00:00</th>\n",
+              "      <th>2023-12-04 00:00:00</th>\n",
+              "      <th>2023-12-11 00:00:00</th>\n",
+              "      <th>2023-12-18 00:00:00</th>\n",
+              "      <th>2023-12-25 00:00:00</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Store1</td>\n",
+              "      <td>SKU1</td>\n",
+              "      <td>24.0</td>\n",
+              "      <td>23</td>\n",
+              "      <td>48</td>\n",
+              "      <td>47</td>\n",
+              "      <td>42</td>\n",
+              "      <td>22</td>\n",
+              "      <td>29</td>\n",
+              "      <td>47</td>\n",
+              "      <td>...</td>\n",
+              "      <td>31</td>\n",
+              "      <td>37</td>\n",
+              "      <td>33</td>\n",
+              "      <td>40</td>\n",
+              "      <td>125</td>\n",
+              "      <td>133</td>\n",
+              "      <td>229</td>\n",
+              "      <td>381</td>\n",
+              "      <td>21</td>\n",
+              "      <td>31</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Store1</td>\n",
+              "      <td>SKU2</td>\n",
+              "      <td>63.0</td>\n",
+              "      <td>23</td>\n",
+              "      <td>22</td>\n",
+              "      <td>25</td>\n",
+              "      <td>40</td>\n",
+              "      <td>32</td>\n",
+              "      <td>26</td>\n",
+              "      <td>30</td>\n",
+              "      <td>...</td>\n",
+              "      <td>20</td>\n",
+              "      <td>20</td>\n",
+              "      <td>25</td>\n",
+              "      <td>50</td>\n",
+              "      <td>75</td>\n",
+              "      <td>95</td>\n",
+              "      <td>231</td>\n",
+              "      <td>590</td>\n",
+              "      <td>25</td>\n",
+              "      <td>33</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Store1</td>\n",
+              "      <td>SKU3</td>\n",
+              "      <td>93.0</td>\n",
+              "      <td>7</td>\n",
+              "      <td>11</td>\n",
+              "      <td>8</td>\n",
+              "      <td>9</td>\n",
+              "      <td>10</td>\n",
+              "      <td>8</td>\n",
+              "      <td>7</td>\n",
+              "      <td>...</td>\n",
+              "      <td>9</td>\n",
+              "      <td>17</td>\n",
+              "      <td>13</td>\n",
+              "      <td>30</td>\n",
+              "      <td>67</td>\n",
+              "      <td>188</td>\n",
+              "      <td>267</td>\n",
+              "      <td>330</td>\n",
+              "      <td>35</td>\n",
+              "      <td>33</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Store1</td>\n",
+              "      <td>SKU4</td>\n",
+              "      <td>48.0</td>\n",
+              "      <td>50</td>\n",
+              "      <td>31</td>\n",
+              "      <td>50</td>\n",
+              "      <td>33</td>\n",
+              "      <td>26</td>\n",
+              "      <td>27</td>\n",
+              "      <td>42</td>\n",
+              "      <td>...</td>\n",
+              "      <td>31</td>\n",
+              "      <td>23</td>\n",
+              "      <td>26</td>\n",
+              "      <td>23</td>\n",
+              "      <td>92</td>\n",
+              "      <td>126</td>\n",
+              "      <td>205</td>\n",
+              "      <td>357</td>\n",
+              "      <td>30</td>\n",
+              "      <td>34</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Store1</td>\n",
+              "      <td>SKU5</td>\n",
+              "      <td>62.0</td>\n",
+              "      <td>8</td>\n",
+              "      <td>5</td>\n",
+              "      <td>13</td>\n",
+              "      <td>11</td>\n",
+              "      <td>6</td>\n",
+              "      <td>7</td>\n",
+              "      <td>9</td>\n",
+              "      <td>...</td>\n",
+              "      <td>19</td>\n",
+              "      <td>9</td>\n",
+              "      <td>15</td>\n",
+              "      <td>21</td>\n",
+              "      <td>93</td>\n",
+              "      <td>243</td>\n",
+              "      <td>710</td>\n",
+              "      <td>1872</td>\n",
+              "      <td>33</td>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5 rows × 107 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7c443d7e-a8cd-441c-a26a-c2bc186e73a5')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-7c443d7e-a8cd-441c-a26a-c2bc186e73a5 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-7c443d7e-a8cd-441c-a26a-c2bc186e73a5');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
             ]
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_skus_sum = store1.drop(['Scode', 'Price'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1shisu4To4wC",
+        "outputId": "937824b1-33e0-49c7-a22f-aedbbe86796e"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 1000 entries, 0 to 999\n",
+            "Columns: 107 entries, Scode to 2023-12-25 00:00:00\n",
+            "dtypes: float64(1), int64(104), object(2)\n",
+            "memory usage: 843.8+ KB\n"
+          ]
         }
       ]
     },
