--- a/Weekly_SKU_level_Product_Sales_Transactions.ipynb
+++ b/Weekly_SKU_level_Product_Sales_Transactions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSmR1jQlQa1l53uaQOlUl9",
+      "authorship_tag": "ABX9TyOL7EpQ1cm6PFAq5jQjnGkt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,21 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **General Overview**\n",
+        "\n",
+        "* The data have 107 columns: 104 columns of weeks, 1 prices, 1 products and one more of stores\n",
+        "\n",
+        "* Exist 5 stores. 3 of them have 1000 products (possibly repeat but at different price) and the rest 1500 products.\n",
+        "\n",
+        "* The distribution of price is almost uniform."
+      ],
+      "metadata": {
+        "id": "c6kE4TEVMAUh"
+      }
     },
     {
       "cell_type": "code",
@@ -806,11 +821,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### Some insights \n",
+        "##### **Some insights** \n",
         "\n",
         "*   November and December are the highest months on sales and its values are high compared to all the rest points\n",
-        "*   Except for temporalities almost all graphs are flat and store 1 have a trend up\n",
-        "\n"
+        "\n",
+        "*   Except for temporalities almost all graphs have good behavior. They are not have erratic behaviors\n",
+        "\n",
+        "*   Store 1 is the one that sells the least and store 3 is the one that sells the most\n",
+        "\n",
+        "* Store 2 and 3 have the higher std\n",
+        "\n",
+        "* The times series by stores maintain similar behaviors"
       ],
       "metadata": {
         "id": "yFgZyb4FVPuB"
@@ -1522,6 +1543,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##### After re scale de data and see some stats by sku. The SKU950 have the higher mean weekly sales "
+      ],
+      "metadata": {
+        "id": "tY5X9BeTPfCb"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "data_skus1_sum = data_skus1_sum.set_index(['Scode', 'Pcode'])\n",
@@ -1852,7 +1882,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Forecast Next 3 Months\n",
+        "# Forecast Next 3 Months units sold\n",
         "from datetime import datetime, timedelta\n",
         "\n",
         "linear_s1['Weekly'] = pd.to_datetime(linear_s1['Weekly'], unit='ns')\n",
