--- a/[Forecasting_Units]_By_Stores_and_Items.ipynb
+++ b/[Forecasting_Units]_By_Stores_and_Items.ipynb
@@ -5,10 +5,11 @@
     "colab": {
       "provenance": [],
       "private_outputs": true,
+      "toc_visible": true,
       "collapsed_sections": [
         "1-6RwZrNX_Lz"
       ],
-      "authorship_tag": "ABX9TyPkKfGn+N/JhpFFPZOZUzZ7",
+      "authorship_tag": "ABX9TyM3mroOl0J8PKFS771vd7r0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -643,6 +644,8 @@
         "\n",
         "# add week column\n",
         "weekly_sales_by_store['week_number'] = weekly_sales_by_store.index.to_series().dt.isocalendar().week\n",
+        "weekly_sales_by_store['sin_week'] = np.sin(2 * np.pi * weekly_sales_by_store['week_number'] / 52)\n",
+        "weekly_sales_by_store['cos_week'] = np.cos(2 * np.pi * weekly_sales_by_store['week_number'] / 52)\n",
         "\n",
         "# sort the DatetimeIndex\n",
         "weekly_sales_by_store = weekly_sales_by_store.sort_index()"
@@ -680,7 +683,7 @@
         "# Combine 'store' and 'item' into a single column\n",
         "weekly_sales_by_store['store_item'] = weekly_sales_by_store['store'] + '_' + weekly_sales_by_store['item']\n",
         "\n",
-        "weekly_sales_by_store = weekly_sales_by_store[weekly_sales_by_store['store'].isin(['Store2', 'Store3', 'Store4', 'Store5'])]\n",
+        "weekly_sales_by_store = weekly_sales_by_store[weekly_sales_by_store['store'].isin(['Store1', 'Store2', 'Store3', 'Store4', 'Store5'])]\n",
         "\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "le = LabelEncoder()\n",
@@ -738,6 +741,8 @@
         "           'lag_9',\n",
         "           'lag_8',\n",
         "           'lag_7',\n",
+        "           'sin_week',\n",
+        "           'cos_week',\n",
         "           'is_peak_season',\n",
         "           'week_number',\n",
         "           'store_item_encoded']\n",
