--- a/[Forecasting_Units]_By_Stores_and_Items.ipynb
+++ b/[Forecasting_Units]_By_Stores_and_Items.ipynb
@@ -132,7 +132,8 @@
         "sales.columns = new_col_names"
       ],
       "metadata": {
-        "id": "a9l3htlN39hn"
+        "id": "a9l3htlN39hn",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
